Updated window title.

--- a/webGL/04-triangleOrtho/triangleOrtho.html
+++ b/webGL/04-triangleOrtho/triangleOrtho.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>CP - Canvas</title>
+        <title>CP - Triangle Ortho</title>
     </head>
     <body onload="main()">
         <canvas id="surface" width="800" height="600"></canvas>
