WebGL: Using un-minified gl-matrix.js

--- a/webGL/04-triangleOrtho/triangleOrtho.html
+++ b/webGL/04-triangleOrtho/triangleOrtho.html
@@ -9,6 +9,6 @@
         <canvas id="surface" width="800" height="600"></canvas>
 
         <script src="triangleOrtho.js"></script>
-        <script src="gl-matrix-min.js"></script>
+        <script src="gl-matrix.js"></script>
     </body>
 </html>
