--- a/webGL/06-multiColoredTriangle/multiColoredTriangle.html
+++ b/webGL/06-multiColoredTriangle/multiColoredTriangle.html
@@ -8,7 +8,7 @@
     <body onload="main()">
         <canvas id="surface" width="800" height="600"></canvas>
 
-        <script src="gl-matrix-min.js"></script>
+        <script src="gl-matrix.js"></script>
         <script src="multiColoredTriangle.js"></script>
     </body>
 </html>
